updated image config